[gd_scene load_steps=2 format=3 uid="uid://7fnsh53uccvk"]

[ext_resource type="Script" path="res://ui/main_menu/MainMenu.gd" id="1_cr7ue"]

[node name="MainMenu" type="VBoxContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -512.0
offset_top = -300.0
offset_right = 512.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1
script = ExtResource("1_cr7ue")

[node name="ResumeButton" type="Button" parent="."]
offset_top = 216.0
offset_right = 131.0
offset_bottom = 269.0
size_flags_horizontal = 0
size_flags_vertical = 8
theme_override_font_sizes/font_size = 32
text = "Resume"

[node name="SettingsButton" type="Button" parent="."]
offset_top = 273.0
offset_right = 133.0
offset_bottom = 326.0
size_flags_horizontal = 0
size_flags_vertical = 8
theme_override_font_sizes/font_size = 32
text = "Settings"

[node name="QuitButton" type="Button" parent="."]
offset_top = 330.0
offset_right = 75.0
offset_bottom = 383.0
size_flags_horizontal = 0
size_flags_vertical = 8
theme_override_font_sizes/font_size = 32
text = "Quit"

[connection signal="pressed" from="ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
